--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="https://williamsena09.github.io/meu-portifolio/">Inicio</a></li>
                 </ul>
             </nav>
         </div>
